[gd_scene load_steps=6 format=4 uid="uid://crimgp11ai40y"]

[ext_resource type="Script" uid="uid://dagp16yp8cbwm" path="res://reboot.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://d0pdndfe4fik0" path="res://textures/ui/progress_bar_fill.png" id="2"]

[sub_resource type="Animation" id="Animation_qlldt"]
resource_name = "Intro"
length = 15.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelContainer/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4, 5, 7, 8, 9, 14, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelContainer/SubTitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 3, 7, 8, 11, 12, 14, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelContainer/Title:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["heat_death_universe", "you_failed"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LabelContainer/SubTitle:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["august_12_2036", "for_now"]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"boot"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:section")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 5, 14.0099),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_upvfv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelContainer/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelContainer/SubTitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LabelContainer/Title:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Heat Death of the Universe"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LabelContainer/SubTitle:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["August 12, 2036"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:section")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r3rol"]
_data = {
&"Intro": SubResource("Animation_qlldt"),
&"RESET": SubResource("Animation_upvfv")
}

[node name="Reboot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="LabelContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="LabelContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Heat Death of the Universe"

[node name="SubTitle" type="Label" parent="LabelContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
theme_override_font_sizes/font_size = 32
text = "August 12, 2036"
horizontal_alignment = 1

[node name="SkipContainer" type="HBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -68.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="ProgressBar" type="TextureProgressBar" parent="SkipContainer"]
self_modulate = Color(1, 0.521569, 0, 1)
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.001
value = 0.7000000000000001
fill_mode = 4
nine_patch_stretch = true
texture_progress = ExtResource("2")

[node name="Info" type="Label" parent="SkipContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.521569, 0, 1)
theme_override_font_sizes/font_size = 32
text = "hold_to_skip"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r3rol")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
